--- a/src/templates.html
+++ b/src/templates.html
@@ -34,3 +34,17 @@
 </div>
 #END#
 #BUTTON#<button class="{{classname}}" onclick="{{onclick}}">{{content}}</button>#END#
+#PROJECT#
+<div class="project" id="{{projectid}}" onclick="expand('{{projectid}}','{{projectid}}-desc')"><div class="image" ><img src="media/{{projectimage}}" width="100%" /></div><div class="title">{{projecttitle}}</div></div>
+<div class="project-desc" id="{{projectid}}-desc">
+    <div class="container">
+        <h1>{{projecttitlecaps}}</h1>
+        <hr />
+        {{projectdesc}}
+        <br />
+        <button class="secondary" onclick="link('{{projecturl}}');">View Github Repo</button>
+        <button class="dark" onclick="hide('{{projectid}}','{{projectid}}-desc')">Close Description</button>
+    </div>
+</div>
+#END#
+#PROJECT_FILLER#<div class="project-filler"></div>#END#
