Update with universal-template, update resume

--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
         </div>
       </div>
       <div class="card border-primary p-1">
+        <div class="card-body">
+          <h4 class="card-title">Universal Templating Engine</h4>
+          <p class="card-text">
+            <span class="badge badge-pill badge-info">C++</span>
+          </p>
+          <p class="card-text">Simple C++ "compiler" for using React-like template components in plain HTML.</p>
+          <a href="https://github.com/jextrevor/universal-template" target="_blank" class="btn btn-sm btn-secondary">View Git Repo</a>
+        </div>
+      </div>
+      <div class="card border-primary p-1">
         <img class="card-img-top" src="media/automation.jpg" alt="" />
         <div class="card-body">
           <h4 class="card-title">Automation</h4>
